--- a/src/app/loading/loading.component.css
+++ b/src/app/loading/loading.component.css
@@ -17,7 +17,7 @@
 /* Basic spinner animation */
 .spinner {
   border: 4px solid rgba(255, 255, 255, 0.3); /* Light border */
-  border-top: 4px solid #48e3cc; /* Highlight color */
+  border-top: 4px solid var(--gstm-primary-color); /* Highlight color */
   border-radius: 50%;
   width: 40px;
   height: 40px;
